Image displacement, Hide teacher name if screen is too small, Separate teacher from course, Fix button icon positions, Header elements spacing, from edge of screen Search bar X padding

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -83,7 +83,7 @@ footer *:last-child {
     width: 80px;
     margin-top: 5px;
     margin-right: 10px;
-    margin-left: 5vh;
+    margin-left: 15px;
     margin-bottom: 5px;
   }
   
