--- a/src/app/results/item/item.component.css
+++ b/src/app/results/item/item.component.css
@@ -24,6 +24,10 @@
   align-items: center;
 }
 
+.instructor-name {
+  color: #666;
+}
+
 .instructor {
   font-size: 12px;
   color: #666;
