--- a/src/app/results/results.component.css
+++ b/src/app/results/results.component.css
@@ -44,12 +44,13 @@ body {
   .search-bar-wrapper {
     width: 90%;
     max-width: 800px;
-    transform: translateX(-5%)
+    transform: translateX(-5%);
+    z-index: 1;
     }  
   
   .search-bar {
     max-width: 800px; 
-    z-index: 12;
+    z-index: 1;
   }
 
   .rectangle.top {
@@ -58,7 +59,8 @@ body {
     align-items: center;
     justify-content: center;
     padding: 20px;
-  }
+    z-index: 10;
+}
 
   .rectangle.middle {
     flex: 1;
@@ -66,6 +68,7 @@ body {
     align-items: center;
     justify-content: center;
     padding: 20px;
+    z-index: 0;
   }
 
 .rectangle.middle.container {
@@ -117,7 +120,6 @@ body {
     padding-top: 2%;
     text-align: center;
     border: 0px solid black;
-    z-index: 2;
     margin: auto;
     font-weight: 400;
     letter-spacing: 0.1em;
